# DF-Metadata-Customizer

./: .gitignore  CONTRIBUTING.md  DFMetadataCustomizer.spec  DF_Metadata_Customizer.py  README.md  metadata_presets.json  pyproject.toml
.github/workflows/: build.yml
df_metadata_customizer/: __init__.py  __main__.py  database_reformatter.py  dialogs.py  file_manager.py  image_cache.py  image_utils.py  mp3_utils.py  rule_manager.py  settings_manager.py  song_metadata.py  song_utils.py  widgets.py
df_metadata_customizer/components/: __init__.py  app_component.py  app_menu.py  filename.py  json_editor.py  navigation.py  output_preview.py  preset.py  rule_tabs.py  song_controls.py  sorting.py  statistics.py  tree.py
df_metadata_customizer/components/rules_presets/: __init__.py  preset.py  rule_tabs.py
df_metadata_customizer/components/song_edit/: __init__.py  cover_display.py  metadata_editor.py  song_edit_section.py
df_metadata_customizer/dialogs/: __init__.py  confirm.py  duplication_check.py  export.py  gdrive_download.py  progress.py  statistics.py
df_metadata_customizer/patches/: __init__.py  rclone.py
df_metadata_customizer/ui_components/: __init__.py  app_component.py  filename.py  json_editor.py  navigation.py  output_preview.py  preset.py  rule_tabs.py  song_controls.py  sorting.py  statistics.py  tree.py
df_metadata_customizer/widgets/: __init__.py  rule_row.py
